--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center" id="projects">
         <h3 class="margin">Projects</h3>
-        <p>Coming soon!</p>
+        <p>Check back another day !!</p>
         <div class="container">
             <div class="row">
 
@@ -85,13 +85,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>I really like computers.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>I also like technology.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>(and i'm looking for a job)</p>
             </div>
         </div>
     </div>
