--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center" id="projects">
         <h3 class="margin">Projects</h3>
-        <p>Check back another day !!</p>
+        <p>Check back another day</p>
         <div class="container">
             <div class="row">
 
