--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="github" target="_blank">GitHub Profile</a>
+                    <a class="nav-link" href="#" id="github" target="_blank">GitHub</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
@@ -108,7 +108,7 @@
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center" id="projects">
         <h3 class="margin">Projects</h3>
-        <p>Check back another day</p>
+        <p>Check back another day  !!</p>
         <div class="container">
             <div class="row">
 
