--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -54,9 +54,11 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
+            <h1 class="margin text-center">Among Us - The Movie</h1>
+            <p>This was a project done by Matthew Luis Cardona and myself. The finished website is a website that tells the reader of the plot of the movie themed around 				the popular indie game, "Among Us" that was uber-popular during the quarantine. The website is space themed (just like the game), both background and the 					content.</p>
+
+			
+            <p>Matthew came up with the idea for the movie, and most of the on-screen dialog that you see. I mostly id the code and the CSS to make is more themed like the 			game rather than just a blank webpage. One function that I learned here was the background-image tag, which I found really efficient and useful. I thought it 				would be like Photoshop, where you have to tell the layer to move to the top, but turns out its actually really simple. This is what i learned </p>
             <a href="#">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
