--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -66,7 +66,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/logo.png" class="img-fluid project-img">
+            <img src="../img/Screen Shot 2023-11-12 at 7.10.40.594PM.png" class="img-amongus project-img">
 
 
             <div class="row">
