added links and finishing touches

--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -59,7 +59,8 @@
 
 			
             <p>Matthew came up with the idea for the movie, and most of the on-screen dialog that you see. I mostly id the code and the CSS to make is more themed like the 			game rather than just a blank webpage. One function that I learned here was the background-image tag, which I found really efficient and useful. I thought it 				would be like Photoshop, where you have to tell the layer to move to the top, but turns out its actually really simple. This is what i learned </p>
-            <a href="#">Link about the project</a><br>
+            <a href="https://among-us-the-movie.matthewluisc.repl.co/">Link to the movie website</a><br>
+            <a href="https://replit.com/@matthewluisc/among-us-the-movie">Link to the movie code (replit)</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
