some finishing touches

--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -58,7 +58,10 @@
             <p>This was a project done by Matthew Luis Cardona and myself. The finished website is a website that tells the reader of the plot of the movie themed around 				the popular indie game, "Among Us" that was uber-popular during the quarantine. The website is space themed (just like the game), both background and the 					content.</p>
 
 			
-            <p>Matthew came up with the idea for the movie, and most of the on-screen dialog that you see. I mostly id the code and the CSS to make is more themed like the 			game rather than just a blank webpage. One function that I learned here was the background-image tag, which I found really efficient and useful. I thought it 				would be like Photoshop, where you have to tell the layer to move to the top, but turns out its actually really simple. This is what i learned </p>
+            <p>Matthew came up with the idea for the movie, and most of the on-screen dialog that you see. I mostly id the code and the CSS to make is more themed like the 			game rather than just a blank webpage. One function that I learned here was the background-image tag, which I found really efficient and useful. I thought it 				would be like Photoshop, where you have to tell the layer to move to the top, but turns out its actually really simple. My only grudge is that I was unable to correctly place the "Submit" button at the bottom of the webpage. I just gave up because the deadline was approaching. But basically apart from that, the only other thing was I wanted to add some music in the background, but then again, the deadline was approaching and I didnt know how to do that, and im pretty sure that requires JS (which we're not learning as of right now).</p>
+		<br>
+	    <p>My only grudge is that I was unable to correctly place the "Submit" button at the bottom of the webpage. I just gave up because the deadline was approaching. But apart from that, the only other thing was I wanted to add some music in the background, but then again, the deadline was approaching, and I didn't know how to do that, and I'm pretty sure that requires JS (which we're not learning as of right now).</p>
+		<
             <a href="https://among-us-the-movie.matthewluisc.repl.co/">Link to the movie website</a><br>
             <a href="https://replit.com/@matthewluisc/among-us-the-movie">Link to the movie code (replit)</a><br>
 
