--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
         <div class="container">
             <div class="row">
 
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">[Movie Webpage Portfolio] Among Us -- The Movie</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
+                            <p class="card-text">A short rundown of plot and cast of movie.</p>
+                            <a href="projects/movie-webpage.html" class="card-link">View</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                
                 <!--
                 <div class="col-sm-4">
                     <div class="card">
