--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -54,8 +54,7 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Create Your Own Adventure Project</h1>
-            <h2>Dating Simulator</h2>
+            <h1 class="margin text-center">Create Your Own Adventure Project: Dating Simulator</h1>
             <p>Text about the project</p>
             <p>More text about the project.</p>
             <a href="#">Link about the project</a><br>
