Mon, Feb 26, 2024, 6:09 PM -05:00

--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -55,8 +55,12 @@
         <div class="container">
 
             <h1 class="margin text-center">Create Your Own Adventure Project: Dating Simulator</h1>
-            <p>This project came to fruition as a little joke I decided to play on myself, by picking dating simulator because I was running out of time to pick another possible project option. However, I did NOT know that my other friend, Jairo Pixabaj, ALSO decided to pick dating simulator as a joke, and we were put together. We tried to make this project as </p>
-            <p>More text about the project.</p>
+            <p>This project came to fruition as a little joke I decided to play on myself, by picking dating simulator because I was running out of time to pick another possible project option. However, I did NOT know that my other friend, Jairo Pixabaj, ALSO decided to pick dating simulator as a joke, and we were put together. We tried to make this project as gender-inclusive by, get ready for it, NOT USING GENDER AT ALL !!</p>
+
+
+            <p>HSTAT and our morals align in the sense that we both agree that games should be inclusive to all. So please forgive us if the game seems a little bland or vague, but we believe that the payoff is much better if this means every person, regardless of gender identity or sexual orientation can play without feeling excluded.</p>
+
+
             <a href="#">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
