Mon, Feb 26, 2024, 6:38 PM -05:00

--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -59,9 +59,9 @@
             <p>This project came to fruition as a little joke I decided to play on myself, by picking dating simulator because I was running out of time to pick another possible project option. However, I did NOT know that my other friend, Jairo Pixabaj, ALSO decided to pick dating simulator as a joke, and we were put together. We tried to make this project as gender-inclusive by, get ready for it, NOT USING GENDER AT ALL !!</p>
 
 
-            ** <p>HSTAT and our morals align in the sense that we both agree that games should be inclusive to all. So please forgive us if the game seems a little bland or vague, but we believe that the payoff is much better if this means every person, regardless of gender identity or sexual orientation can play without feeling excluded.</p> 
+            ** <p>HSTAT and our morals align in the sense that we both agree that games should be inclusive to all. So please forgive us if the game seems a little bland or vague, but we believe that the payoff is much better if this means every person, regardless of gender identity or sexual orientation can play without feeling excluded.</p>
 
-            <p>This project was a little hard to complete, because me and Jairo were often daydreaming in class when we should have been working on our project, and we were both drowning in other classes work, so we kind of had this project on the sideburner, but in the end, I am pleased with the final product, because I honestly didn't think I could actually finish this, because the story was actually meant to go a completely different direction, but due to time constraints, it had to be shortened.</p>
+            <p>This project was a little hard to complete, because me and Jairo were often daydreaming in class when we should have been working on our project, and we were both drowning in other classes work, so we kind of had this project on the sideburner, but in the end, I am pleased with the final product. The hardest parts were keeping on schedule and keeping everything gender-neutral while keeping the plot with a little bit of juice to it. </p>
 
 
 
