--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -54,13 +54,15 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Create Your Own Adventure Project: Dating Simulator</h1>
+            <h1 class="margin text-center">Create Your Own Adventure Project</h1>
+            <h1 class="margin text-center"> __________________________________</h1>
+            <h1 class="margin text-center">Dating Simulator</h1>
+            <h1 class="margin text-center"> __________________________________</h1>
 
             <p>This project came to fruition as a little joke I decided to play on myself, by picking dating simulator because I was running out of time to pick another possible project option. However, I did NOT know that my other friend, Jairo Pixabaj, ALSO decided to pick dating simulator as a joke, and we were put together. We tried to make this project as gender-inclusive by, get ready for it, NOT USING GENDER AT ALL !!</p>
 
-            <div class="col-sm-6">
             <p>HSTAT and our morals align in the sense that we both agree that games should be inclusive to all. So please forgive us if the game seems a little bland or vague, but we believe that the payoff is much better if this means every person, regardless of gender identity or sexual orientation can play without feeling excluded.</p>
-            <div class="col-sm-6">
+
 
             <p>This project was a little hard to complete, because me and Jairo were often daydreaming in class when we should have been working on our project, and we were both drowning in other classes work, so we kind of had this project on the sideburner, but in the end, I am pleased with the final product. The hardest parts were keeping on schedule and keeping everything gender-neutral while keeping the plot with a little bit of juice to it. </p>
 
