--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -67,7 +67,7 @@
 
             <p>This project was a little hard to complete, because me and Jairo were often daydreaming in class when we should have been working on our project, and we were both drowning in other classes work, so we kind of had this project on the sideburner, but in the end, I am pleased with the final product. The hardest parts were keeping on schedule and keeping everything gender-neutral while keeping the plot with a little bit of juice to it. </p>
 
-            <p>Definetely, one of me and Jairo's grudges about the project is the inability to finish the project. We really wanted to add more story, more juice, but the deadline soon approached, and we had to deliver the MVP.
+            <p>Definitely, one of me and Jairo's grudges about the project is the inability to finish the project. We really wanted to add more story, more juice, but the deadline soon approached, and we had to deliver the MVP.
 
                 MVP is a phrase Mr. Mueller introduced to us. MVP means "Minimum Viable Product", or in other terms, be sure that your project is the bare minimum, and slowly work your way to another stage of MVP, perhaps add another storyline, maybe add images for all slides, etc. Just make sure that whatever you submit is a product that can perform what its intended to do, at the minimum.</p>
 
