Mon, Feb 26, 2024, 7:30 PM -05:00

--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -71,7 +71,7 @@
 
                 MVP is a phrase Mr. Mueller introduced to us. MVP means "Minimum Viable Product", or in other terms, be sure that your project is the bare minimum, and slowly work your way to another stage of MVP, perhaps add another storyline, maybe add images for all slides, etc. Just make sure that whatever you submit is a product that can perform what its intended to do, at the minimum.</p>
 
-            <a href="#">Link about the project</a><br>
+            <a href="">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
