--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -71,14 +71,15 @@
 
                 MVP is a phrase Mr. Mueller introduced to us. MVP means "Minimum Viable Product", or in other terms, be sure that your project is the bare minimum, and slowly work your way to another stage of MVP, perhaps add another storyline, maybe add images for all slides, etc. Just make sure that whatever you submit is a product that can perform what its intended to do, at the minimum.</p>
 
-            <a href="https://github.com/urielh3191/sep10-dating-simulator/tree/main">Link about the project</a><br>
+                <p>The last step that would have been crucial was to make the project in HTML rather than Markdown, as that would give me extra credit.</p>
+
+            <a href="https://github.com/urielh3191/sep10-dating-simulator/tree/main">Link to simulator</a><br>
+            <a href="https://github.com/urielh3191/sep10-dating-simulator/blob/main/image.png">Link to storyline</a>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
-
-            <img src="../img/logo.png" class="img-fluid project-img">
 
 
             <div class="row">
