Mon, Feb 26, 2024, 7:51 PM -05:00

--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -60,16 +60,21 @@
             <h1 class="margin text-center"> [ーーーーーーーーーーーーー]</h1>
             <br><br>
 
-            <p>This project came to fruition as a little joke I decided to play on myself, by picking dating simulator because I was running out of time to pick another possible project option. However, I did NOT know that my other friend, Jairo Pixabaj, ALSO decided to pick dating simulator as a joke, and we were put together. We tried to make this project as gender-inclusive by, get ready for it, NOT USING GENDER AT ALL !!</p>
 
+            <h3>Quick statement</h3>
             <p>HSTAT and our morals align in the sense that we both agree that activities (such as this interactive game) should not exclude anyone out and include everyone of all shades and spectrums as much as possible. So please forgive us if the game seems a little bland or vague, but we believe that the payoff is much better if this means every person, regardless of gender identity or sexual orientation can play without feeling excluded.</p>
 
+
+            <h2>Why a dating sim?</h2>
+            <p>This project came to fruition as a little joke I decided to play on myself, by picking dating simulator because I was running out of time to pick another possible project option. However, I did NOT know that my other friend, Jairo Pixabaj, ALSO decided to pick dating simulator as a joke, and we were put together. We tried to make this project as gender-inclusive by, get ready for it, NOT USING GENDER AT ALL !!</p>
 
             <p>This project was a little hard to complete, because me and Jairo were often daydreaming in class when we should have been working on our project, and we were both drowning in other classes work, so we kind of had this project on the sideburner, but in the end, I am pleased with the final product. The hardest parts were keeping on schedule and keeping everything gender-neutral while keeping the plot with a little bit of juice to it. </p>
 
             <p>Definitely, one of me and Jairo's grudges about the project is the inability to finish the project. We really wanted to add more story, more juice, but the deadline soon approached, and we had to deliver the MVP.
 
                 MVP is a phrase Mr. Mueller introduced to us. MVP means "Minimum Viable Product", or in other terms, be sure that your project is the bare minimum, and slowly work your way to another stage of MVP, perhaps add another storyline, maybe add images for all slides, etc. Just make sure that whatever you submit is a product that can perform what its intended to do, at the minimum.</p>
+
+            <p></p>
 
                 <p>The last step that would have been crucial was to make the project in HTML rather than Markdown, as that would give me extra credit.</p>
 
