--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -68,15 +68,20 @@
             <h2>Why a dating sim?</h2>
             <p>This project came to fruition as a little joke I decided to play on myself, by picking dating simulator because I was running out of time to pick another possible project option. However, I did NOT know that my other friend, Jairo Pixabaj, ALSO decided to pick dating simulator as a joke, and we were put together. We tried to make this project as gender-inclusive by, get ready for it, NOT USING GENDER AT ALL !!</p>
 
+            <p>However, I believe Mr. Mueller made me and Jairo work together to practice our teamwork skills, communication skills, and our push/pull commit repair abilities (problem-solving skills)</p>
+
+            <h2>What went wrong?</h2>
             <p>This project was a little hard to complete, because me and Jairo were often daydreaming in class when we should have been working on our project, and we were both drowning in other classes work, so we kind of had this project on the sideburner, but in the end, I am pleased with the final product. The hardest parts were keeping on schedule and keeping everything gender-neutral while keeping the plot with a little bit of juice to it. </p>
 
             <p>Definitely, one of me and Jairo's grudges about the project is the inability to finish the project. We really wanted to add more story, more juice, but the deadline soon approached, and we had to deliver the MVP.
 
-                MVP is a phrase Mr. Mueller introduced to us. MVP means "Minimum Viable Product", or in other terms, be sure that your project is the bare minimum, and slowly work your way to another stage of MVP, perhaps add another storyline, maybe add images for all slides, etc. Just make sure that whatever you submit is a product that can perform what its intended to do, at the minimum.</p>
+                MVP is a phrase Mr. Mueller introduced to us. MVP means "Minimum Viable Product", or in other terms, be sure that your project is the bare minimum, and slowly work your way to another stage of MVP, perhaps add another storyline, maybe add images for all slides, etc. Just make sure that whatever you submit is a product that can p2erform what its intended to do, at the minimum.</p>
 
-            <p></p>
 
-                <p>The last step that would have been crucial was to make the project in HTML rather than Markdown, as that would give me extra credit.</p>
+
+            <h2>What would you have done better next time?</h2>
+
+                <p>The last step that would have been crucial was to make the project in HTML rather than Markdown, as that would give me extra credit. Apart from what I've been repeating like a parrot for the past entry, I would add a more longer and juicier storyline that still holds its inclusive values.</p>
 
             <a href="https://github.com/urielh3191/sep10-dating-simulator/tree/main">Link to simulator</a><br>
             <a href="https://github.com/urielh3191/sep10-dating-simulator/blob/main/image.png">Link to storyline</a>
