Mon, Feb 26, 2024, 7:58 PM -05:00

--- a/projects/CYOA.html
+++ b/projects/CYOA.html
@@ -84,7 +84,7 @@
                 <p>The last step that would have been crucial was to make the project in HTML rather than Markdown, as that would give me extra credit. Apart from what I've been repeating like a parrot for the past entry, I would add a more longer and juicier storyline that still holds its inclusive values.</p>
 
             <a href="https://github.com/urielh3191/sep10-dating-simulator/tree/main">Link to simulator</a><br>
-            <a href="https://github.com/urielh3191/sep10-dating-simulator/blob/main/image.png">Link to storyline</a>
+            <img src="../img/CYOA-Diagram.png" class="img-cyoa sim-img">
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
